# datastreamplatform

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CODEOWNERS  pyproject.toml
src/libraries/client/: .pylintrc  pyproject.toml
src/libraries/client/client/: logger.py
src/libraries/client/client/danm/: danm_client.py  medical_product_factory.py
src/libraries/client/client/danm_client/: danm_client.py  medical_product_factory.py
src/libraries/client/client/pharmacies/: farmavalue.py  onlife.py  san_nicolas.py
src/libraries/client/tests/: test_client.py
src/libraries/interfaces/: pyproject.toml
src/libraries/interfaces/interfaces/: pharmacies.py
src/projects/elsalvador_medicine_proj/: pyproject.toml
src/projects/elsalvador_medicine_proj/elsalvador_medicine_proj/: load_medicines.py  load_to_db.py  medical_products.csv  process_pharmacies.py  transform_to_duckdb.py
src/projects/salva_farma/: pyproject.toml  rxconfig.py
src/projects/salva_farma/salva_farma/: salva_farma.py  styles.py
src/projects/salva_farma/salva_farma/components/: sidebar.py
src/projects/salva_farma/salva_farma/pages/: dashboard.py  index.py  settings.py
src/projects/salva_farma/salva_farma/templates/: template.py
