[tool.poetry]
name = "datastreamplatform"
version = "0.1.0"
description = ""
authors = ["javier gonzalez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.11.0"
isort = "^5.12.0"
pylint = "^3.0.2"
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
