[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["Javier Gonzalez"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
interfaces = {path = "/home/javier/datastream/datastreamplatform/src/libraries/interfaces", develop = true}
rapidfuzz = "^3.5.2"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^23.11.0"
isort = "^5.12.0"
pylint = "^3.0.2"
interfaces = {path = "/home/javier/datastream/datastreamplatform/src/libraries/interfaces", develop = true}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
